tests/errors/002-parsing/004-expected-end-of-tuple/002-return-lists/001-terminal-nonsense.xxx
x := () => (int, garbage garbage garbage) { }
